--- a/index.html
+++ b/index.html
@@ -251,7 +251,7 @@
   </div>
   <h3>Vela Recordação</h3>
   <p>Tamanho: 80g</p>
-  <p>Preço: 1 unidade por R$ 30, 2 ou mais por R$ 25 cada</p>
+  <p>Preço: 1 unidade por R$ 30. A partir de 2 por R$ 25 cada</p>
   <label for="essencia_recordacao">Escolha a essência:</label>
   <select id="essencia_recordacao" class="btn">
     <option value="">-- Selecione --</option>
