--- a/index.html
+++ b/index.html
@@ -226,7 +226,7 @@
     </div>
   </details>
   <p style="text-align:center;">Tamanho: 80g</p>
-  <p style="text-align:center;">Preço: 1 unidade por R$ 30, 2 ou mais por R$ 25 cada</p>
+  <p style="text-align:center;">1 unidade por R$ 30. A partir de 2 por R$ 25 cada</p>
   <label for="essencia_recordacao">Escolha a essência:</label>
   <select id="essencia_recordacao" class="btn">
     <option value="">-- Selecione --</option>
