--- a/index.html
+++ b/index.html
@@ -97,8 +97,8 @@
 
   <!-- Vela Cappuccino -->
 <div class="produto">
-  <img src="imagens/Vela_Cappuccino.jpg" alt="Vela Aromática Cappuccino">
-  <h3>Vela Aromática Cappuccino</h3>
+  <img src="imagens/Vela_Cappuccino.jpg" alt="Vela Cappuccino">
+  <h3>Vela Cappuccino</h3>
   <p>Tamanho: 140g - R$ 65,00</p>
   <p>Essência: Cappuccino</p>
   <div class="quantidade">
