--- a/index.html
+++ b/index.html
@@ -9,6 +9,10 @@
         .modal {
             transition: opacity 0.3s;
         }
+        .carousel img {
+            aspect-ratio: 16/9;
+            object-fit: cover;
+        }
         .carousel::-webkit-scrollbar {
             height: 8px;
         }
@@ -32,7 +36,7 @@
             </p>
             <button onclick="closeWelcome()"
                 class="bg-blue-500 text-white px-4 py-2 rounded-full hover:bg-blue-600 transition">
-                Começar
+                Entendi
             </button>
         </div>
     </div>
@@ -51,15 +55,18 @@
 
     <!-- Modal de Detalhes do Produto -->
     <div id="productModal" class="hidden fixed inset-0 bg-black bg-opacity-50 flex items-center justify-center">
-        <div class="bg-white rounded-lg p-6 max-w-md w-full space-y-4">
-            <button onclick="closeModal()" class="absolute top-2 right-2 text-gray-500 hover:text-gray-700">&times;</button>
-            <h2 id="modalTitle" class="text-xl font-semibold"></h2>
-            <div class="carousel flex overflow-x-auto gap-2 pb-2">
-                <!-- Imagens do carrossel aqui -->
+        <div class="bg-white rounded-lg p-6 max-w-md w-full relative">
+            <button onclick="closeModal()" class="absolute top-2 right-2 text-gray-500 hover:text-gray-700 text-2xl">&times;</button>
+            
+            <!-- Carrossel de Imagens -->
+            <div class="carousel flex overflow-x-auto gap-2 pb-2 mb-4">
+                <!-- Imagens serão inseridas aqui -->
             </div>
+            
+            <h2 id="modalTitle" class="text-xl font-semibold mb-4"></h2>
             <div id="modalContent"></div>
             <button onclick="addToCart()" 
-                class="w-full bg-blue-500 text-white py-2 rounded-md hover:bg-blue-600 transition">
+                class="w-full bg-blue-500 text-white py-2 rounded-md hover:bg-blue-600 transition mt-4">
                 Adicionar ao Carrinho
             </button>
         </div>
@@ -88,7 +95,7 @@
         {
             id: 1,
             name: 'Vela Cappuccino',
-            images: ['Vela_Cappuccino'],
+            images: ['Vela_Cappuccino.jpg'],
             weight: '140g',
             price: 65,
             scent: 'Cappuccino',
@@ -97,7 +104,7 @@
         {
             id: 2,
             name: 'Vela Melancia',
-            images: ['Vela_Melancia'],
+            images: ['Vela_Melancia.jpg'],
             weightOptions: [
                 { value: '100g', price: 45 },
                 { value: '180g', price: 50 }
@@ -108,7 +115,7 @@
         {
             id: 3,
             name: 'Vela Love',
-            images: ['Vela_Love_1', 'Vela_Love_2', 'Vela_Love_3'],
+            images: ['Vela_Love_1.jpg', 'Vela_Love_2.jpg', 'Vela_Love_3.jpg'],
             weight: '110g',
             price: 40,
             scentOptions: [
@@ -123,7 +130,7 @@
         {
             id: 4,
             name: 'Vela Recordação',
-            images: ['Vela_Recordacao_1', 'Vela_Recordacao_2', 'Vela_Recordacao_3'],
+            images: ['Vela_Recordacao_1.jpg', 'Vela_Recordacao_2.jpg', 'Vela_Recordacao_3.jpg'],
             weight: '80g',
             basePrice: 30,
             discountPrice: 25,
@@ -144,7 +151,6 @@
     // Inicialização
     function init() {
         renderProducts();
-        setTimeout(closeWelcome, 5000);
     }
 
     // Renderização dos produtos
@@ -153,17 +159,8 @@
         container.innerHTML = products.map(product => `
             <div class="bg-white rounded-lg shadow-lg overflow-hidden hover:shadow-xl transition">
                 <div class="relative">
-                    ${product.images.length > 1 ? 
-                        `<div class="flex overflow-x-auto gap-2 pb-2">
-                            ${product.images.map(img => `
-                                <img src="https://placehold.co/400x300/ ${product.colorOptions ? product.colorOptions[0].toLowerCase().replace(' ', '') : 'blue'}/FFFFFF.png?text=${product.name}" 
-                                    class="w-32 h-32 object-cover">
-                            `).join('')}
-                        </div>`
-                    : 
-                        `<img src="https://placehold.co/400x300/ ${product.color || 'blue'}/FFFFFF.png?text=${product.name}" 
-                            class="w-full h-48 object-cover">`
-                    }
+                    <img src="https://placehold.co/400x225/ ${product.color || 'blue'}/FFFFFF.jpg?text=${product.name}" 
+                        class="w-full object-cover aspect-[16/9]">
                 </div>
                 <div class="p-4 space-y-2">
                     <h3 class="font-semibold text-blue-800">${product.name}</h3>
@@ -193,15 +190,15 @@
         currentProduct = products.find(p => p.id === productId);
         const modal = document.getElementById('productModal');
         const modalTitle = document.getElementById('modalTitle');
-        const modalContent = document.getElementById('modalContent');
         const carousel = modal.querySelector('.carousel');
+        const modalContent = document.getElementById('modalContent');
 
         modalTitle.textContent = currentProduct.name;
 
         // Renderiza carrossel de imagens
-        carousel.innerHTML = currentProduct.images.map(img => `
-            <img src="https://placehold.co/400x300/ ${currentProduct.colorOptions ? currentProduct.colorOptions[0].toLowerCase().replace(' ', '') : 'blue'}/FFFFFF.png?text=${currentProduct.name}" 
-                class="w-32 h-32 object-cover">
+        carousel.innerHTML = currentProduct.images.map((img, index) => `
+            <img src="https://placehold.co/400x225/ ${currentProduct.colorOptions ? currentProduct.colorOptions[0].toLowerCase().replace(' ', '') : 'blue'}/FFFFFF.jpg?text=${currentProduct.name}" 
+                class="w-40 object-cover aspect-[16/9]">
         `).join('');
 
         // Renderiza opções do produto
